# aurum

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  MEMORY.md  README.md  SKILLS.md  __main__.py  aurum_cli.py  backtest.py  build.py  code_viewer.py  docker-compose.yml  launcher.py  live.py  multistrategy.py  pyproject.toml  run_api.py  run_mercurio.py  run_thoth.py  smoke_test.py  telegram_bot.py
.claude/: settings.local.json
analysis/: __init__.py  _chart_palette.py  benchmark.py  compare_runs.py  diagnostics.py  dsr.py  live_replay_test.py  montecarlo.py  overfit_audit.py  plots.py  report_html.py  results_gui.py  robustness.py  stats.py
api/: auth.py  models.py  risk_check.py  routes.py  server.py
bot/: telegram.py
config/: connections.json  engines.py  janestreet_defaults.py  macro_params.py  paper_state.json  params.py  paths.py  risk_gates.json  runtime.py
core/: README.md  __init__.py  alchemy_state.py  alchemy_ui.py  analysis_export.py  arb_lifetime.py  arb_scoring.py  arb_tab_matrix.py  audit_trail.py  cache.py  chronos.py  connections.py  data.py  db.py  db_live_runs.py  engine_base.py  engine_picker.py  evolution.py  exchange_api.py  failure_policy.py  fixture_capture.py  fs.py  funding_scanner.py  harmonics.py  hawkes.py  health.py  hmm_cache.py  htf.py  htf_filter.py  indicators.py  key_store.py  market_data.py  metrics_helpers.py  mt5.py  persistence.py  portfolio.py  portfolio_monitor.py  proc.py  risk_gates.py  run_manager.py  (+7 more)
deploy/: README.md  aurum_audit_daily.service  aurum_audit_daily.timer  aurum_cleanup_stale_runs.service  aurum_cleanup_stale_runs.timer  aurum_cockpit_api.service  aurum_probe@.service  citadel_paper@.service  citadel_shadow@.service  install_audit_daily.sh  install_cleanup_stale_runs.sh  install_cockpit_api_vps.sh  install_engine_vps.sh  install_janestreet_vps.sh  install_paper_multi_vps.sh  install_paper_vps.sh  install_probe_vps.sh  install_shadow_multi_vps.sh  install_shadow_vps.sh  janestreet_paper.service  jump_paper@.service  jump_shadow@.service  millennium_paper.service  millennium_paper@.service  millennium_shadow.service  millennium_shadow@.service  renaissance_paper@.service  renaissance_shadow@.service  zombie_scanner.service  zombie_scanner.timer
engines/: aqr.py  arbitrage.py  backtest.py  bridgewater.py  capula.py  citadel.py  darwin.py  deshaw.py  graham.py  harmonics_backtest.py  janestreet.py  jump.py  kepos.py  live.py  meanrev.py  medallion.py  mercurio.py  millennium.py  millennium_live.py  multistrategy.py  newton.py  ornstein.py  phi.py  prometeu.py  renaissance.py  supertrend_futures.py  thoth.py  twosigma.py
launcher_support/: __init__.py  _test_mode.py  audio.py  bootstrap.py  briefings.py  cockpit_client.py  cockpit_tab.py  command_center.py  dashboard_controls.py  deploy_pipeline.py  engine_detail_fetchers.py  engine_detail_view.py  engine_logs_view.py  engines_live_helpers.py  engines_live_view.py  engines_sidebar.py  execution.py  menu_data.py  roadmap_data.py  runs_history.py  shadow_poller.py  signal_detail_popup.py  ssh_tunnel.py  trade_chart_popup.py  trade_history_panel.py  tunnel_registry.py
macro_brain/: __init__.py  brain.py  dashboard_view.py  notify.py
tests/: conftest.py  test_alchemy_snapshot.py  test_alchemy_state.py  test_alchemy_state_contracts.py  test_analysis_export.py  test_api_contracts.py  test_arb_lifetime.py  test_arb_scoring.py  test_arb_scoring_contracts.py  test_arb_tab_matrix.py  test_auth_contracts.py  test_bridgewater_compare_battery_contracts.py  test_bridgewater_contracts.py  test_capula.py  test_chronos_contracts.py  test_chronos_hmm.py  test_cockpit_api.py  test_cockpit_client.py  test_cockpit_client_typed.py  test_cockpit_paper_endpoints.py  test_cockpit_signals_endpoint.py  test_data_contracts.py  test_db_live_trades.py  test_db_live_trades_cockpit_aliases.py  test_dsr.py  test_engine_detail_smoke.py  test_engine_detail_view.py  test_engine_picker_contracts.py  test_engines_live_view.py  test_engines_live_view_cockpit.py  test_engines_navigation.py  test_engines_sidebar.py  test_evolution_contracts.py  (+56 more)
(+906 files in other folders)
