[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurum-finance"
version = "1.0.0"
description = "Plataforma quantitativa de trading algorítmico para crypto futures"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "matplotlib>=3.7,<4",
    "requests>=2.28,<3",
    "websockets>=11.0,<14",
]

[project.scripts]
aurum = "aurum_cli:main"

[tool.setuptools]
py-modules = ["aurum_cli", "backtest"]

[tool.setuptools.packages.find]
include = ["config*", "core*", "analysis*", "engines*", "bot*"]
