[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurum-finance"
version = "1.0.0"
description = "Plataforma quantitativa de trading algorítmico para crypto futures"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "matplotlib>=3.7,<4",
    "requests>=2.28,<3",
    "websockets>=11.0,<14",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "cryptography>=41.0,<44",
    "pydantic>=2.0,<3",
    "email-validator>=2.0,<3",
]
ml = [
    "hmmlearn>=0.3,<1",
    "arch>=6.0,<8",
]
all = ["aurum-finance[api,ml]"]
dev = [
    "pytest>=7.0,<9",
]

[project.scripts]
aurum = "aurum_cli:main"

[tool.setuptools]
py-modules = ["aurum_cli"]

[tool.setuptools.packages.find]
include = ["config*", "core*", "analysis*", "engines*", "bot*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
norecursedirs = [
    ".git",
    ".worktrees",
    ".pytest_cache",
    ".pytest_local_tmp",
    ".test_tmp",
    "tests/_tmp",
    "_tmp",
    "_archive",
    "pytest-cache-files-*",
    "pytest-run-*",
    "tmp*",
    "__pycache__",
]
